Kimba/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID program_point program_point2 SEMICOLON vars functions MAIN program_point3 block
Rule 2     program_point -> <empty>
Rule 3     program_point2 -> <empty>
Rule 4     program_point3 -> <empty>
Rule 5     vars -> VAR ID vars_aux COLON type vars_point SEMICOLON vars
Rule 6     vars -> VAR ID list_declaration COLON type vars_point2 SEMICOLON vars
Rule 7     vars -> empty
Rule 8     vars_aux -> COMMA ID vars_aux
Rule 9     vars_aux -> empty
Rule 10    list_declaration -> LBRACKET var_const RBRACKET list_declaration_point
Rule 11    vars_point -> <empty>
Rule 12    vars_point2 -> <empty>
Rule 13    list_declaration_point -> <empty>
Rule 14    expression_log -> not expression expression_log_point
Rule 15    expression_log -> not expression expression_log_point AND expression_log_point2 expression_log
Rule 16    expression_log -> not expression expression_log_point OR expression_log_point2 expression_log
Rule 17    expression_log_point -> <empty>
Rule 18    expression_log_point2 -> <empty>
Rule 19    not -> NOT
Rule 20    not -> empty
Rule 21    expression -> exp expression_point2
Rule 22    expression -> exp GREATER_THAN expression_point exp expression_point2
Rule 23    expression -> exp LESS_THAN expression_point exp expression_point2
Rule 24    expression -> exp GREATER_OR_EQUAL_THAN expression_point exp expression_point2
Rule 25    expression -> exp LESS_OR_EQUAL_THAN expression_point exp expression_point2
Rule 26    expression -> exp EQUAL_THAN expression_point exp expression_point2
Rule 27    expression -> exp NOT_EQUAL_THAN expression_point exp expression_point2
Rule 28    expression_point -> <empty>
Rule 29    expression_point2 -> <empty>
Rule 30    exp -> term exp_point
Rule 31    exp -> term exp_point PLUS exp_point2 exp
Rule 32    exp -> term exp_point MINUS exp_point2 exp
Rule 33    exp_point -> <empty>
Rule 34    exp_point2 -> <empty>
Rule 35    term -> factor term_point
Rule 36    term -> factor term_point TIMES term_point2 term
Rule 37    term -> factor term_point DIVIDES term_point2 term
Rule 38    term_point -> <empty>
Rule 39    term_point2 -> <empty>
Rule 40    factor -> LPAREN factor_point expression_log RPAREN factor_point2
Rule 41    factor -> var_const
Rule 42    factor_point -> <empty>
Rule 43    factor_point2 -> <empty>
Rule 44    var_const -> ID var_const_point list_call
Rule 45    var_const -> CONST_INT var_const_point2
Rule 46    var_const -> CONST_FLOAT var_const_point3
Rule 47    var_const -> CONST_STRING var_const_point4
Rule 48    var_const -> boolean var_const_point5
Rule 49    var_const -> function
Rule 50    var_const_point -> <empty>
Rule 51    var_const_point2 -> <empty>
Rule 52    var_const_point3 -> <empty>
Rule 53    var_const_point4 -> <empty>
Rule 54    var_const_point5 -> <empty>
Rule 55    boolean -> TRUE
Rule 56    boolean -> FALSE
Rule 57    return -> RETURN expression_log SEMICOLON return_point
Rule 58    return_point -> <empty>
Rule 59    functions -> FUNC type_func ID LPAREN params RPAREN functions_point block functions_point2 functions
Rule 60    functions -> empty
Rule 61    type_func -> type
Rule 62    type_func -> VOID
Rule 63    params -> type ID params_aux
Rule 64    params -> empty
Rule 65    params_aux -> COMMA type ID params_aux
Rule 66    params_aux -> empty
Rule 67    functions_point -> <empty>
Rule 68    functions_point2 -> <empty>
Rule 69    type -> INT
Rule 70    type -> FLOAT
Rule 71    type -> STRING
Rule 72    type -> BOOLEAN
Rule 73    block -> LBRACE statements RBRACE
Rule 74    statements -> vars statement statements
Rule 75    statements -> vars empty
Rule 76    statement -> assignment
Rule 77    statement -> condition
Rule 78    statement -> write
Rule 79    statement -> loop
Rule 80    statement -> method
Rule 81    statement -> predefined_method
Rule 82    statement -> return
Rule 83    assignment -> ID assignment_point list_call ASSIGN assignment_point2 expression_log SEMICOLON assignment_point4
Rule 84    assignment -> ID assignment_point list_call ASSIGN assignment_point2 READ LPAREN expression_log RPAREN assignment_point3 SEMICOLON assignment_point4
Rule 85    assignment_point -> <empty>
Rule 86    assignment_point2 -> <empty>
Rule 87    assignment_point3 -> <empty>
Rule 88    assignment_point4 -> <empty>
Rule 89    list_call -> LBRACKET list_point list_point2 exp list_point3 list_point4 RBRACKET
Rule 90    list_call -> empty
Rule 91    list_point -> <empty>
Rule 92    list_point2 -> <empty>
Rule 93    list_point3 -> <empty>
Rule 94    list_point4 -> <empty>
Rule 95    condition -> IF LPAREN expression_log RPAREN condition_point block else condition_point2
Rule 96    condition_point -> <empty>
Rule 97    condition_point2 -> <empty>
Rule 98    else -> ELSE else_point block
Rule 99    else -> empty
Rule 100   else_point -> <empty>
Rule 101   write -> PRINT LPAREN expression_log write_point RPAREN SEMICOLON
Rule 102   write_point -> <empty>
Rule 103   loop -> WHILE loop_point LPAREN expression_log RPAREN loop_point2 block loop_point3
Rule 104   loop_point -> <empty>
Rule 105   loop_point2 -> <empty>
Rule 106   loop_point3 -> <empty>
Rule 107   method -> ID LPAREN method_point method_point2 args RPAREN method_point3 method_point4 method_point5 SEMICOLON
Rule 108   method_point -> <empty>
Rule 109   method_point2 -> <empty>
Rule 110   method_point3 -> <empty>
Rule 111   method_point4 -> <empty>
Rule 112   method_point5 -> <empty>
Rule 113   function -> ID LPAREN function_point function_point2 args RPAREN function_point3 function_point4 function_point5
Rule 114   function_point -> <empty>
Rule 115   function_point2 -> <empty>
Rule 116   function_point3 -> <empty>
Rule 117   function_point4 -> <empty>
Rule 118   function_point5 -> <empty>
Rule 119   args -> expression_log args_point args_aux
Rule 120   args -> empty
Rule 121   args_aux -> COMMA expression_log args_point args_aux
Rule 122   args_aux -> empty
Rule 123   args_point -> <empty>
Rule 124   string_var -> ID
Rule 125   string_var -> CONST_STRING
Rule 126   empty -> <empty>
Rule 127   predefined_method -> START LPAREN RPAREN SEMICOLON
Rule 128   predefined_method -> RESET LPAREN RPAREN SEMICOLON
Rule 129   predefined_method -> END LPAREN RPAREN SEMICOLON
Rule 130   predefined_method -> GIRA_IZQ LPAREN exp RPAREN SEMICOLON
Rule 131   predefined_method -> GIRA_DER LPAREN exp RPAREN SEMICOLON
Rule 132   predefined_method -> CAMINA LPAREN exp RPAREN SEMICOLON
Rule 133   predefined_method -> SI_DIBUJA LPAREN RPAREN SEMICOLON
Rule 134   predefined_method -> NO_DIBUJA LPAREN RPAREN SEMICOLON
Rule 135   predefined_method -> DIBUJA_POLIGONO LPAREN exp COMMA exp RPAREN SEMICOLON
Rule 136   predefined_method -> DIBUJA_CIRCULO LPAREN exp RPAREN SEMICOLON
Rule 137   predefined_method -> DIBUJA_ESTRELLA LPAREN exp RPAREN SEMICOLON
Rule 138   predefined_method -> COLOR_PLUMA LPAREN string_var RPAREN SEMICOLON

Terminals, with rules where they appear

AND                  : 15
ASSIGN               : 83 84
BOOLEAN              : 72
CAMINA               : 132
COLON                : 5 6
COLOR_PLUMA          : 138
COMMA                : 8 65 121 135
CONST_FLOAT          : 46
CONST_INT            : 45
CONST_STRING         : 47 125
DIBUJA_CIRCULO       : 136
DIBUJA_ESTRELLA      : 137
DIBUJA_POLIGONO      : 135
DIVIDES              : 37
ELSE                 : 98
END                  : 129
EQUAL_THAN           : 26
FALSE                : 56
FLOAT                : 70
FUNC                 : 59
GIRA_DER             : 131
GIRA_IZQ             : 130
GREATER_OR_EQUAL_THAN : 24
GREATER_THAN         : 22
ID                   : 1 5 6 8 44 59 63 65 83 84 107 113 124
IF                   : 95
INT                  : 69
LBRACE               : 73
LBRACKET             : 10 89
LESS_OR_EQUAL_THAN   : 25
LESS_THAN            : 23
LPAREN               : 40 59 84 95 101 103 107 113 127 128 129 130 131 132 133 134 135 136 137 138
MAIN                 : 1
MINUS                : 32
NOT                  : 19
NOT_EQUAL_THAN       : 27
NO_DIBUJA            : 134
OR                   : 16
PLUS                 : 31
PRINT                : 101
PROGRAM              : 1
RBRACE               : 73
RBRACKET             : 10 89
READ                 : 84
RESET                : 128
RETURN               : 57
RPAREN               : 40 59 84 95 101 103 107 113 127 128 129 130 131 132 133 134 135 136 137 138
SEMICOLON            : 1 5 6 57 83 84 101 107 127 128 129 130 131 132 133 134 135 136 137 138
SI_DIBUJA            : 133
START                : 127
STRING               : 71
TIMES                : 36
TRUE                 : 55
VAR                  : 5 6
VOID                 : 62
WHILE                : 103
error                : 

Nonterminals, with rules where they appear

args                 : 107 113
args_aux             : 119 121
args_point           : 119 121
assignment           : 76
assignment_point     : 83 84
assignment_point2    : 83 84
assignment_point3    : 84
assignment_point4    : 83 84
block                : 1 59 95 98 103
boolean              : 48
condition            : 77
condition_point      : 95
condition_point2     : 95
else                 : 95
else_point           : 98
empty                : 7 9 20 60 64 66 75 90 99 120 122
exp                  : 21 22 22 23 23 24 24 25 25 26 26 27 27 31 32 89 130 131 132 135 135 136 137
exp_point            : 30 31 32
exp_point2           : 31 32
expression           : 14 15 16
expression_log       : 15 16 40 57 83 84 95 101 103 119 121
expression_log_point : 14 15 16
expression_log_point2 : 15 16
expression_point     : 22 23 24 25 26 27
expression_point2    : 21 22 23 24 25 26 27
factor               : 35 36 37
factor_point         : 40
factor_point2        : 40
function             : 49
function_point       : 113
function_point2      : 113
function_point3      : 113
function_point4      : 113
function_point5      : 113
functions            : 1 59
functions_point      : 59
functions_point2     : 59
list_call            : 44 83 84
list_declaration     : 6
list_declaration_point : 10
list_point           : 89
list_point2          : 89
list_point3          : 89
list_point4          : 89
loop                 : 79
loop_point           : 103
loop_point2          : 103
loop_point3          : 103
method               : 80
method_point         : 107
method_point2        : 107
method_point3        : 107
method_point4        : 107
method_point5        : 107
not                  : 14 15 16
params               : 59
params_aux           : 63 65
predefined_method    : 81
program              : 0
program_point        : 1
program_point2       : 1
program_point3       : 1
return               : 82
return_point         : 57
statement            : 74
statements           : 73 74
string_var           : 138
term                 : 30 31 32 36 37
term_point           : 35 36 37
term_point2          : 36 37
type                 : 5 6 61 63 65
type_func            : 59
var_const            : 10 41
var_const_point      : 44
var_const_point2     : 45
var_const_point3     : 46
var_const_point4     : 47
var_const_point5     : 48
vars                 : 1 5 6 74 75
vars_aux             : 5 8
vars_point           : 5
vars_point2          : 6
write                : 78
write_point          : 101

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID program_point program_point2 SEMICOLON vars functions MAIN program_point3 block

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID program_point program_point2 SEMICOLON vars functions MAIN program_point3 block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . program_point program_point2 SEMICOLON vars functions MAIN program_point3 block
    (2) program_point -> .

    SEMICOLON       reduce using rule 2 (program_point -> .)

    program_point                  shift and go to state 4

state 4

    (1) program -> PROGRAM ID program_point . program_point2 SEMICOLON vars functions MAIN program_point3 block
    (3) program_point2 -> .

    SEMICOLON       reduce using rule 3 (program_point2 -> .)

    program_point2                 shift and go to state 5

state 5

    (1) program -> PROGRAM ID program_point program_point2 . SEMICOLON vars functions MAIN program_point3 block

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM ID program_point program_point2 SEMICOLON . vars functions MAIN program_point3 block
    (5) vars -> . VAR ID vars_aux COLON type vars_point SEMICOLON vars
    (6) vars -> . VAR ID list_declaration COLON type vars_point2 SEMICOLON vars
    (7) vars -> . empty
    (126) empty -> .

    VAR             shift and go to state 8
    FUNC            reduce using rule 126 (empty -> .)
    MAIN            reduce using rule 126 (empty -> .)

    vars                           shift and go to state 7
    empty                          shift and go to state 9

state 7

    (1) program -> PROGRAM ID program_point program_point2 SEMICOLON vars . functions MAIN program_point3 block
    (59) functions -> . FUNC type_func ID LPAREN params RPAREN functions_point block functions_point2 functions
    (60) functions -> . empty
    (126) empty -> .

    FUNC            shift and go to state 11
    MAIN            reduce using rule 126 (empty -> .)

    functions                      shift and go to state 10
    empty                          shift and go to state 12

state 8

    (5) vars -> VAR . ID vars_aux COLON type vars_point SEMICOLON vars
    (6) vars -> VAR . ID list_declaration COLON type vars_point2 SEMICOLON vars

    ID              shift and go to state 13


state 9

    (7) vars -> empty .

    FUNC            reduce using rule 7 (vars -> empty .)
    MAIN            reduce using rule 7 (vars -> empty .)
    ID              reduce using rule 7 (vars -> empty .)
    IF              reduce using rule 7 (vars -> empty .)
    PRINT           reduce using rule 7 (vars -> empty .)
    WHILE           reduce using rule 7 (vars -> empty .)
    START           reduce using rule 7 (vars -> empty .)
    RESET           reduce using rule 7 (vars -> empty .)
    END             reduce using rule 7 (vars -> empty .)
    GIRA_IZQ        reduce using rule 7 (vars -> empty .)
    GIRA_DER        reduce using rule 7 (vars -> empty .)
    CAMINA          reduce using rule 7 (vars -> empty .)
    SI_DIBUJA       reduce using rule 7 (vars -> empty .)
    NO_DIBUJA       reduce using rule 7 (vars -> empty .)
    DIBUJA_POLIGONO reduce using rule 7 (vars -> empty .)
    DIBUJA_CIRCULO  reduce using rule 7 (vars -> empty .)
    DIBUJA_ESTRELLA reduce using rule 7 (vars -> empty .)
    COLOR_PLUMA     reduce using rule 7 (vars -> empty .)
    RETURN          reduce using rule 7 (vars -> empty .)
    RBRACE          reduce using rule 7 (vars -> empty .)


state 10

    (1) program -> PROGRAM ID program_point program_point2 SEMICOLON vars functions . MAIN program_point3 block

    MAIN            shift and go to state 14


state 11

    (59) functions -> FUNC . type_func ID LPAREN params RPAREN functions_point block functions_point2 functions
    (61) type_func -> . type
    (62) type_func -> . VOID
    (69) type -> . INT
    (70) type -> . FLOAT
    (71) type -> . STRING
    (72) type -> . BOOLEAN

    VOID            shift and go to state 17
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 21

    type_func                      shift and go to state 15
    type                           shift and go to state 16

state 12

    (60) functions -> empty .

    MAIN            reduce using rule 60 (functions -> empty .)


state 13

    (5) vars -> VAR ID . vars_aux COLON type vars_point SEMICOLON vars
    (6) vars -> VAR ID . list_declaration COLON type vars_point2 SEMICOLON vars
    (8) vars_aux -> . COMMA ID vars_aux
    (9) vars_aux -> . empty
    (10) list_declaration -> . LBRACKET var_const RBRACKET list_declaration_point
    (126) empty -> .

    COMMA           shift and go to state 24
    LBRACKET        shift and go to state 26
    COLON           reduce using rule 126 (empty -> .)

    vars_aux                       shift and go to state 22
    list_declaration               shift and go to state 23
    empty                          shift and go to state 25

state 14

    (1) program -> PROGRAM ID program_point program_point2 SEMICOLON vars functions MAIN . program_point3 block
    (4) program_point3 -> .

    LBRACE          reduce using rule 4 (program_point3 -> .)

    program_point3                 shift and go to state 27

state 15

    (59) functions -> FUNC type_func . ID LPAREN params RPAREN functions_point block functions_point2 functions

    ID              shift and go to state 28


state 16

    (61) type_func -> type .

    ID              reduce using rule 61 (type_func -> type .)


state 17

    (62) type_func -> VOID .

    ID              reduce using rule 62 (type_func -> VOID .)


state 18

    (69) type -> INT .

    ID              reduce using rule 69 (type -> INT .)
    SEMICOLON       reduce using rule 69 (type -> INT .)


state 19

    (70) type -> FLOAT .

    ID              reduce using rule 70 (type -> FLOAT .)
    SEMICOLON       reduce using rule 70 (type -> FLOAT .)


state 20

    (71) type -> STRING .

    ID              reduce using rule 71 (type -> STRING .)
    SEMICOLON       reduce using rule 71 (type -> STRING .)


state 21

    (72) type -> BOOLEAN .

    ID              reduce using rule 72 (type -> BOOLEAN .)
    SEMICOLON       reduce using rule 72 (type -> BOOLEAN .)


state 22

    (5) vars -> VAR ID vars_aux . COLON type vars_point SEMICOLON vars

    COLON           shift and go to state 29


state 23

    (6) vars -> VAR ID list_declaration . COLON type vars_point2 SEMICOLON vars

    COLON           shift and go to state 30


state 24

    (8) vars_aux -> COMMA . ID vars_aux

    ID              shift and go to state 31


state 25

    (9) vars_aux -> empty .

    COLON           reduce using rule 9 (vars_aux -> empty .)


state 26

    (10) list_declaration -> LBRACKET . var_const RBRACKET list_declaration_point
    (44) var_const -> . ID var_const_point list_call
    (45) var_const -> . CONST_INT var_const_point2
    (46) var_const -> . CONST_FLOAT var_const_point3
    (47) var_const -> . CONST_STRING var_const_point4
    (48) var_const -> . boolean var_const_point5
    (49) var_const -> . function
    (55) boolean -> . TRUE
    (56) boolean -> . FALSE
    (113) function -> . ID LPAREN function_point function_point2 args RPAREN function_point3 function_point4 function_point5

    ID              shift and go to state 33
    CONST_INT       shift and go to state 34
    CONST_FLOAT     shift and go to state 35
    CONST_STRING    shift and go to state 36
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    var_const                      shift and go to state 32
    boolean                        shift and go to state 37
    function                       shift and go to state 38

state 27

    (1) program -> PROGRAM ID program_point program_point2 SEMICOLON vars functions MAIN program_point3 . block
    (73) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 42

    block                          shift and go to state 41

state 28

    (59) functions -> FUNC type_func ID . LPAREN params RPAREN functions_point block functions_point2 functions

    LPAREN          shift and go to state 43


state 29

    (5) vars -> VAR ID vars_aux COLON . type vars_point SEMICOLON vars
    (69) type -> . INT
    (70) type -> . FLOAT
    (71) type -> . STRING
    (72) type -> . BOOLEAN

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 21

    type                           shift and go to state 44

state 30

    (6) vars -> VAR ID list_declaration COLON . type vars_point2 SEMICOLON vars
    (69) type -> . INT
    (70) type -> . FLOAT
    (71) type -> . STRING
    (72) type -> . BOOLEAN

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 21

    type                           shift and go to state 45

state 31

    (8) vars_aux -> COMMA ID . vars_aux
    (8) vars_aux -> . COMMA ID vars_aux
    (9) vars_aux -> . empty
    (126) empty -> .

    COMMA           shift and go to state 24
    COLON           reduce using rule 126 (empty -> .)

    vars_aux                       shift and go to state 46
    empty                          shift and go to state 25

state 32

    (10) list_declaration -> LBRACKET var_const . RBRACKET list_declaration_point

    RBRACKET        shift and go to state 47


state 33

    (44) var_const -> ID . var_const_point list_call
    (113) function -> ID . LPAREN function_point function_point2 args RPAREN function_point3 function_point4 function_point5
    (50) var_const_point -> .

    LPAREN          shift and go to state 49
    LBRACKET        reduce using rule 50 (var_const_point -> .)
    RBRACKET        reduce using rule 50 (var_const_point -> .)
    TIMES           reduce using rule 50 (var_const_point -> .)
    DIVIDES         reduce using rule 50 (var_const_point -> .)
    PLUS            reduce using rule 50 (var_const_point -> .)
    MINUS           reduce using rule 50 (var_const_point -> .)
    RPAREN          reduce using rule 50 (var_const_point -> .)
    COMMA           reduce using rule 50 (var_const_point -> .)
    GREATER_THAN    reduce using rule 50 (var_const_point -> .)
    LESS_THAN       reduce using rule 50 (var_const_point -> .)
    GREATER_OR_EQUAL_THAN reduce using rule 50 (var_const_point -> .)
    LESS_OR_EQUAL_THAN reduce using rule 50 (var_const_point -> .)
    EQUAL_THAN      reduce using rule 50 (var_const_point -> .)
    NOT_EQUAL_THAN  reduce using rule 50 (var_const_point -> .)
    AND             reduce using rule 50 (var_const_point -> .)
    OR              reduce using rule 50 (var_const_point -> .)
    SEMICOLON       reduce using rule 50 (var_const_point -> .)

    var_const_point                shift and go to state 48

state 34

    (45) var_const -> CONST_INT . var_const_point2
    (51) var_const_point2 -> .

    RBRACKET        reduce using rule 51 (var_const_point2 -> .)
    TIMES           reduce using rule 51 (var_const_point2 -> .)
    DIVIDES         reduce using rule 51 (var_const_point2 -> .)
    PLUS            reduce using rule 51 (var_const_point2 -> .)
    MINUS           reduce using rule 51 (var_const_point2 -> .)
    RPAREN          reduce using rule 51 (var_const_point2 -> .)
    COMMA           reduce using rule 51 (var_const_point2 -> .)
    GREATER_THAN    reduce using rule 51 (var_const_point2 -> .)
    LESS_THAN       reduce using rule 51 (var_const_point2 -> .)
    GREATER_OR_EQUAL_THAN reduce using rule 51 (var_const_point2 -> .)
    LESS_OR_EQUAL_THAN reduce using rule 51 (var_const_point2 -> .)
    EQUAL_THAN      reduce using rule 51 (var_const_point2 -> .)
    NOT_EQUAL_THAN  reduce using rule 51 (var_const_point2 -> .)
    AND             reduce using rule 51 (var_const_point2 -> .)
    OR              reduce using rule 51 (var_const_point2 -> .)
    SEMICOLON       reduce using rule 51 (var_const_point2 -> .)

    var_const_point2               shift and go to state 50

state 35

    (46) var_const -> CONST_FLOAT . var_const_point3
    (52) var_const_point3 -> .

    RBRACKET        reduce using rule 52 (var_const_point3 -> .)
    TIMES           reduce using rule 52 (var_const_point3 -> .)
    DIVIDES         reduce using rule 52 (var_const_point3 -> .)
    PLUS            reduce using rule 52 (var_const_point3 -> .)
    MINUS           reduce using rule 52 (var_const_point3 -> .)
    RPAREN          reduce using rule 52 (var_const_point3 -> .)
    COMMA           reduce using rule 52 (var_const_point3 -> .)
    GREATER_THAN    reduce using rule 52 (var_const_point3 -> .)
    LESS_THAN       reduce using rule 52 (var_const_point3 -> .)
    GREATER_OR_EQUAL_THAN reduce using rule 52 (var_const_point3 -> .)
    LESS_OR_EQUAL_THAN reduce using rule 52 (var_const_point3 -> .)
    EQUAL_THAN      reduce using rule 52 (var_const_point3 -> .)
    NOT_EQUAL_THAN  reduce using rule 52 (var_const_point3 -> .)
    AND             reduce using rule 52 (var_const_point3 -> .)
    OR              reduce using rule 52 (var_const_point3 -> .)
    SEMICOLON       reduce using rule 52 (var_const_point3 -> .)

    var_const_point3               shift and go to state 51

state 36

    (47) var_const -> CONST_STRING . var_const_point4
    (53) var_const_point4 -> .

    RBRACKET        reduce using rule 53 (var_const_point4 -> .)
    TIMES           reduce using rule 53 (var_const_point4 -> .)
    DIVIDES         reduce using rule 53 (var_const_point4 -> .)
    PLUS            reduce using rule 53 (var_const_point4 -> .)
    MINUS           reduce using rule 53 (var_const_point4 -> .)
    RPAREN          reduce using rule 53 (var_const_point4 -> .)
    COMMA           reduce using rule 53 (var_const_point4 -> .)
    GREATER_THAN    reduce using rule 53 (var_const_point4 -> .)
    LESS_THAN       reduce using rule 53 (var_const_point4 -> .)
    GREATER_OR_EQUAL_THAN reduce using rule 53 (var_const_point4 -> .)
    LESS_OR_EQUAL_THAN reduce using rule 53 (var_const_point4 -> .)
    EQUAL_THAN      reduce using rule 53 (var_const_point4 -> .)
    NOT_EQUAL_THAN  reduce using rule 53 (var_const_point4 -> .)
    AND             reduce using rule 53 (var_const_point4 -> .)
    OR              reduce using rule 53 (var_const_point4 -> .)
    SEMICOLON       reduce using rule 53 (var_const_point4 -> .)

    var_const_point4               shift and go to state 52

state 37

    (48) var_const -> boolean . var_const_point5
    (54) var_const_point5 -> .

    RBRACKET        reduce using rule 54 (var_const_point5 -> .)
    TIMES           reduce using rule 54 (var_const_point5 -> .)
    DIVIDES         reduce using rule 54 (var_const_point5 -> .)
    PLUS            reduce using rule 54 (var_const_point5 -> .)
    MINUS           reduce using rule 54 (var_const_point5 -> .)
    RPAREN          reduce using rule 54 (var_const_point5 -> .)
    COMMA           reduce using rule 54 (var_const_point5 -> .)
    GREATER_THAN    reduce using rule 54 (var_const_point5 -> .)
    LESS_THAN       reduce using rule 54 (var_const_point5 -> .)
    GREATER_OR_EQUAL_THAN reduce using rule 54 (var_const_point5 -> .)
    LESS_OR_EQUAL_THAN reduce using rule 54 (var_const_point5 -> .)
    EQUAL_THAN      reduce using rule 54 (var_const_point5 -> .)
    NOT_EQUAL_THAN  reduce using rule 54 (var_const_point5 -> .)
    AND             reduce using rule 54 (var_const_point5 -> .)
    OR              reduce using rule 54 (var_const_point5 -> .)
    SEMICOLON       reduce using rule 54 (var_const_point5 -> .)

    var_const_point5               shift and go to state 53

state 38

    (49) var_const -> function .

    RBRACKET        reduce using rule 49 (var_const -> function .)
    TIMES           reduce using rule 49 (var_const -> function .)
    DIVIDES         reduce using rule 49 (var_const -> function .)
    PLUS            reduce using rule 49 (var_const -> function .)
    MINUS           reduce using rule 49 (var_const -> function .)
    RPAREN          reduce using rule 49 (var_const -> function .)
    COMMA           reduce using rule 49 (var_const -> function .)
    GREATER_THAN    reduce using rule 49 (var_const -> function .)
    LESS_THAN       reduce using rule 49 (var_const -> function .)
    GREATER_OR_EQUAL_THAN reduce using rule 49 (var_const -> function .)
    LESS_OR_EQUAL_THAN reduce using rule 49 (var_const -> function .)
    EQUAL_THAN      reduce using rule 49 (var_const -> function .)
    NOT_EQUAL_THAN  reduce using rule 49 (var_const -> function .)
    AND             reduce using rule 49 (var_const -> function .)
    OR              reduce using rule 49 (var_const -> function .)
    SEMICOLON       reduce using rule 49 (var_const -> function .)


state 39

    (55) boolean -> TRUE .

    RBRACKET        reduce using rule 55 (boolean -> TRUE .)
    TIMES           reduce using rule 55 (boolean -> TRUE .)
    DIVIDES         reduce using rule 55 (boolean -> TRUE .)
    PLUS            reduce using rule 55 (boolean -> TRUE .)
    MINUS           reduce using rule 55 (boolean -> TRUE .)
    RPAREN          reduce using rule 55 (boolean -> TRUE .)
    COMMA           reduce using rule 55 (boolean -> TRUE .)
    GREATER_THAN    reduce using rule 55 (boolean -> TRUE .)
    LESS_THAN       reduce using rule 55 (boolean -> TRUE .)
    GREATER_OR_EQUAL_THAN reduce using rule 55 (boolean -> TRUE .)
    LESS_OR_EQUAL_THAN reduce using rule 55 (boolean -> TRUE .)
    EQUAL_THAN      reduce using rule 55 (boolean -> TRUE .)
    NOT_EQUAL_THAN  reduce using rule 55 (boolean -> TRUE .)
    AND             reduce using rule 55 (boolean -> TRUE .)
    OR              reduce using rule 55 (boolean -> TRUE .)
    SEMICOLON       reduce using rule 55 (boolean -> TRUE .)


state 40

    (56) boolean -> FALSE .

    RBRACKET        reduce using rule 56 (boolean -> FALSE .)
    TIMES           reduce using rule 56 (boolean -> FALSE .)
    DIVIDES         reduce using rule 56 (boolean -> FALSE .)
    PLUS            reduce using rule 56 (boolean -> FALSE .)
    MINUS           reduce using rule 56 (boolean -> FALSE .)
    RPAREN          reduce using rule 56 (boolean -> FALSE .)
    COMMA           reduce using rule 56 (boolean -> FALSE .)
    GREATER_THAN    reduce using rule 56 (boolean -> FALSE .)
    LESS_THAN       reduce using rule 56 (boolean -> FALSE .)
    GREATER_OR_EQUAL_THAN reduce using rule 56 (boolean -> FALSE .)
    LESS_OR_EQUAL_THAN reduce using rule 56 (boolean -> FALSE .)
    EQUAL_THAN      reduce using rule 56 (boolean -> FALSE .)
    NOT_EQUAL_THAN  reduce using rule 56 (boolean -> FALSE .)
    AND             reduce using rule 56 (boolean -> FALSE .)
    OR              reduce using rule 56 (boolean -> FALSE .)
    SEMICOLON       reduce using rule 56 (boolean -> FALSE .)


state 41

    (1) program -> PROGRAM ID program_point program_point2 SEMICOLON vars functions MAIN program_point3 block .

    $end            reduce using rule 1 (program -> PROGRAM ID program_point program_point2 SEMICOLON vars functions MAIN program_point3 block .)


state 42

    (73) block -> LBRACE . statements RBRACE
    (74) statements -> . vars statement statements
    (75) statements -> . vars empty
    (5) vars -> . VAR ID vars_aux COLON type vars_point SEMICOLON vars
    (6) vars -> . VAR ID list_declaration COLON type vars_point2 SEMICOLON vars
    (7) vars -> . empty
    (126) empty -> .

    VAR             shift and go to state 8
    ID              reduce using rule 126 (empty -> .)
    IF              reduce using rule 126 (empty -> .)
    PRINT           reduce using rule 126 (empty -> .)
    WHILE           reduce using rule 126 (empty -> .)
    START           reduce using rule 126 (empty -> .)
    RESET           reduce using rule 126 (empty -> .)
    END             reduce using rule 126 (empty -> .)
    GIRA_IZQ        reduce using rule 126 (empty -> .)
    GIRA_DER        reduce using rule 126 (empty -> .)
    CAMINA          reduce using rule 126 (empty -> .)
    SI_DIBUJA       reduce using rule 126 (empty -> .)
    NO_DIBUJA       reduce using rule 126 (empty -> .)
    DIBUJA_POLIGONO reduce using rule 126 (empty -> .)
    DIBUJA_CIRCULO  reduce using rule 126 (empty -> .)
    DIBUJA_ESTRELLA reduce using rule 126 (empty -> .)
    COLOR_PLUMA     reduce using rule 126 (empty -> .)
    RETURN          reduce using rule 126 (empty -> .)
    RBRACE          reduce using rule 126 (empty -> .)

    statements                     shift and go to state 54
    vars                           shift and go to state 55
    empty                          shift and go to state 9

state 43

    (59) functions -> FUNC type_func ID LPAREN . params RPAREN functions_point block functions_point2 functions
    (63) params -> . type ID params_aux
    (64) params -> . empty
    (69) type -> . INT
    (70) type -> . FLOAT
    (71) type -> . STRING
    (72) type -> . BOOLEAN
    (126) empty -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 20
    BOOLEAN         shift and go to state 21
    RPAREN          reduce using rule 126 (empty -> .)

    params                         shift and go to state 56
    type                           shift and go to state 57
    empty                          shift and go to state 58

state 44

    (5) vars -> VAR ID vars_aux COLON type . vars_point SEMICOLON vars
    (11) vars_point -> .

    SEMICOLON       reduce using rule 11 (vars_point -> .)

    vars_point                     shift and go to state 59

state 45

    (6) vars -> VAR ID list_declaration COLON type . vars_point2 SEMICOLON vars
    (12) vars_point2 -> .

    SEMICOLON       reduce using rule 12 (vars_point2 -> .)

    vars_point2                    shift and go to state 60

state 46

    (8) vars_aux -> COMMA ID vars_aux .

    COLON           reduce using rule 8 (vars_aux -> COMMA ID vars_aux .)


state 47

    (10) list_declaration -> LBRACKET var_const RBRACKET . list_declaration_point
    (13) list_declaration_point -> .

    COLON           reduce using rule 13 (list_declaration_point -> .)
